--- a/language/de-DE/mod_dwd_wetterwarnungen.ini
+++ b/language/de-DE/mod_dwd_wetterwarnungen.ini
@@ -3,6 +3,9 @@ MOD_DWD_WETTERWARNUNGEN_XML_DESCRIPTION="Zeigt Wetterwarnungen vom Deutschen Wet
 
 ; Grundeinstellungen
 MOD_DWD_WETTERWARNUNGEN_BASIC_SETTINGS="Grundeinstellungen"
+MOD_DWD_WETTERWARNUNGEN_SELECT_STATION_LABEL="Aus Wetterstationen auswählen"
+MOD_DWD_WETTERWARNUNGEN_SELECT_STATION_DESC="Falls das DWD Wettermodul ebenfalls installiert ist, kann aus dessen Wetterstationen ausgewählt werden."
+MOD_DWD_WETTERWARNUNGEN_STATION_LABEL="Wetterstation"
 MOD_DWD_WETTERWARNUNGEN_LATITUDE_LABEL="Breitengrad"
 MOD_DWD_WETTERWARNUNGEN_LATITUDE_DESC="Breitengrad für das Zentrum der Karte (z.B. 50.264024)"
 MOD_DWD_WETTERWARNUNGEN_LONGITUDE_LABEL="Längengrad"
