--- a/language/en-GB/mod_dwd_wetterwarnungen.ini
+++ b/language/en-GB/mod_dwd_wetterwarnungen.ini
@@ -3,6 +3,9 @@ MOD_DWD_WETTERWARNUNGEN_XML_DESCRIPTION="Displays weather warnings from the Germ
 
 ; Basic Settings
 MOD_DWD_WETTERWARNUNGEN_BASIC_SETTINGS="Basic Settings"
+MOD_DWD_WETTERWARNUNGEN_SELECT_STATION_LABEL="Choose from Weather Stations"
+MOD_DWD_WETTERWARNUNGEN_SELECT_STATION_DESC="If the DWD Weather module is also installed, location can be selected from its weather station list."
+MOD_DWD_WETTERWARNUNGEN_STATION_LABEL="Weather Station"
 MOD_DWD_WETTERWARNUNGEN_LATITUDE_LABEL="Latitude"
 MOD_DWD_WETTERWARNUNGEN_LATITUDE_DESC="Latitude for the center of the map (e.g. 50.264024)"
 MOD_DWD_WETTERWARNUNGEN_LONGITUDE_LABEL="Longitude"
